Fixes off center sizing issue of custom profile picture   * lis are now direct children of ul     * each li now has 2 divs that handles their respective parts of     the photo   * removed wrapper div from photos show partial and added class to   the img itself   * introduces bug where name of user is not on the picture

--- a/app/assets/stylesheets/friend_display.css
+++ b/app/assets/stylesheets/friend_display.css
@@ -63,7 +63,7 @@
 
 .friend_links img:hover {
   background-color: #A9D9DB;
-  margin: -1em 5px 1em 5px;
+  /*margin: -1em 5px 1em 5px;*/
   opacity: .75;
 }
 
